# margin_calibration

./: LICENSE  README.md  pyproject.toml
docs/: MARGIN CALIBRATION.md
examples/: 1-linear_calibration.ipynb  1-margin_calibration_penalization.ipynb  1-with_arrays.ipynb  2-with_dataframes.ipynb
notebooks/: 1-linear_calibration.ipynb
src/: margin_calibration.py  utils.py
tests/: test_margin_calibration.py
